cmake_minimum_required(VERSION 3.8)

project(Frontier)

add_definitions(-DPIKE=1 -DOPMLEDITOR=1 -DWIN95VERSION=1 -D_WINDOWS -DWIN32 -DWIN32_COMPILE)

add_executable(opml WIN32
	"${PROJECT_SOURCE_DIR}/Common/PCRE/chartables.c"
	"${PROJECT_SOURCE_DIR}/Common/PCRE/get.c"
	"${PROJECT_SOURCE_DIR}/Common/PCRE/pcre.c"
	"${PROJECT_SOURCE_DIR}/Common/PCRE/study.c"
	"${PROJECT_SOURCE_DIR}/Common/source/about.c"
	"${PROJECT_SOURCE_DIR}/Common/source/assert.c"
	"${PROJECT_SOURCE_DIR}/Common/source/base64.c"
	"${PROJECT_SOURCE_DIR}/Common/source/cancoon.c"
	"${PROJECT_SOURCE_DIR}/Common/source/cancoonpopup.c"
	"${PROJECT_SOURCE_DIR}/Common/source/cancoonverbs.c"
	"${PROJECT_SOURCE_DIR}/Common/source/cancoonwindow.c"
	"${PROJECT_SOURCE_DIR}/Common/source/claybrowserexpand.c"
	"${PROJECT_SOURCE_DIR}/Common/source/claybrowserstruc.c"
	"${PROJECT_SOURCE_DIR}/Common/source/claybrowservalidate.c"
	"${PROJECT_SOURCE_DIR}/Common/source/claycallbacks.c"
	"${PROJECT_SOURCE_DIR}/Common/source/claylinelayout.c"
	"${PROJECT_SOURCE_DIR}/Common/source/command.c"
	"${PROJECT_SOURCE_DIR}/Common/source/cursor.c"
	"${PROJECT_SOURCE_DIR}/Common/source/db.c"
	"${PROJECT_SOURCE_DIR}/Common/source/dbstats.c"
	"${PROJECT_SOURCE_DIR}/Common/source/dbverbs.c"
	"${PROJECT_SOURCE_DIR}/Common/source/dockmenu.c"
	"${PROJECT_SOURCE_DIR}/Common/source/error.c"
	"${PROJECT_SOURCE_DIR}/Common/source/file.c"
	"${PROJECT_SOURCE_DIR}/Common/source/filedialog.c"
	"${PROJECT_SOURCE_DIR}/Common/source/fileloop.c"
	"${PROJECT_SOURCE_DIR}/Common/source/filemp3.c"
	"${PROJECT_SOURCE_DIR}/Common/source/fileops.c"
	"${PROJECT_SOURCE_DIR}/Common/source/filepath.c"
	"${PROJECT_SOURCE_DIR}/Common/source/fileverbs.c"
	"${PROJECT_SOURCE_DIR}/Common/source/findinfile.c"
	"${PROJECT_SOURCE_DIR}/Common/source/font.c"
	"${PROJECT_SOURCE_DIR}/Common/source/frontierconfig.c"
	"${PROJECT_SOURCE_DIR}/Common/source/frontierdebug.c"
	"${PROJECT_SOURCE_DIR}/Common/source/frontierstart.c"
	"${PROJECT_SOURCE_DIR}/Common/source/frontierwindows.c"
	"${PROJECT_SOURCE_DIR}/Common/source/FrontierWinMain.c"
	"${PROJECT_SOURCE_DIR}/Common/source/htmlcontrol.c"
	"${PROJECT_SOURCE_DIR}/Common/source/icon.c"
	"${PROJECT_SOURCE_DIR}/Common/source/kb.c"
	"${PROJECT_SOURCE_DIR}/Common/source/lang.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langcallbacks.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langcrypt.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langdate.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langdll.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langerror.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langerrorwindow.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langevaluate.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langexternal.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langhash.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langhtml.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langlist.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langmath.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langmysql.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langops.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langpack.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langparser.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langpython.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langregexp.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langscan.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langsqlite.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langstartup.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langsystypes.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langtmpstack.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langtrace.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langtree.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langvalue.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langverbs.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langwinipc.c"
	"${PROJECT_SOURCE_DIR}/Common/source/langxml.c"
	"${PROJECT_SOURCE_DIR}/Common/source/launch.c"
	"${PROJECT_SOURCE_DIR}/Common/source/main.c"
	"${PROJECT_SOURCE_DIR}/Common/source/md5.c"
	"${PROJECT_SOURCE_DIR}/Common/source/memory.c"
	"${PROJECT_SOURCE_DIR}/Common/source/menu.c"
	"${PROJECT_SOURCE_DIR}/Common/source/menubar.c"
	"${PROJECT_SOURCE_DIR}/Common/source/menueditor.c"
	"${PROJECT_SOURCE_DIR}/Common/source/menufind.c"
	"${PROJECT_SOURCE_DIR}/Common/source/menupack.c"
	"${PROJECT_SOURCE_DIR}/Common/source/menuresize.c"
	"${PROJECT_SOURCE_DIR}/Common/source/menuverbs.c"
	"${PROJECT_SOURCE_DIR}/Common/source/meprograms.c"
	"${PROJECT_SOURCE_DIR}/Common/source/miniwindow.c"
	"${PROJECT_SOURCE_DIR}/Common/source/mouse.c"
	"${PROJECT_SOURCE_DIR}/Common/source/notify.c"
	"${PROJECT_SOURCE_DIR}/Common/source/odbengine.c"
	"${PROJECT_SOURCE_DIR}/Common/source/op.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opbuttons.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opdisplay.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opdraggingmove.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opedit.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opexpand.c"
	"${PROJECT_SOURCE_DIR}/Common/source/ophoist.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opicons.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opinit.c"
	"${PROJECT_SOURCE_DIR}/Common/source/oplangtext.c"
	"${PROJECT_SOURCE_DIR}/Common/source/oplineheight.c"
	"${PROJECT_SOURCE_DIR}/Common/source/oplist.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opops.c"
	"${PROJECT_SOURCE_DIR}/Common/source/oppack.c"
	"${PROJECT_SOURCE_DIR}/Common/source/oppopup.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opprint.c"
	"${PROJECT_SOURCE_DIR}/Common/source/oprefcon.c"
	"${PROJECT_SOURCE_DIR}/Common/source/ops.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opscreenmap.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opscrollbar.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opstructure.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opvalidate.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opverbs.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opvisit.c"
	"${PROJECT_SOURCE_DIR}/Common/source/opxml.c"
	"${PROJECT_SOURCE_DIR}/Common/source/pict.c"
	"${PROJECT_SOURCE_DIR}/Common/source/pictverbs.c"
	"${PROJECT_SOURCE_DIR}/Common/source/popup.c"
	"${PROJECT_SOURCE_DIR}/Common/source/process.c"
	"${PROJECT_SOURCE_DIR}/Common/source/quickdraw.c"
	"${PROJECT_SOURCE_DIR}/Common/source/resources.c"
	"${PROJECT_SOURCE_DIR}/Common/source/scrap.c"
	"${PROJECT_SOURCE_DIR}/Common/source/scripts.c"
	"${PROJECT_SOURCE_DIR}/Common/source/scrollbar.c"
	"${PROJECT_SOURCE_DIR}/Common/source/search.c"
	"${PROJECT_SOURCE_DIR}/Common/source/serialnumber.c"
	"${PROJECT_SOURCE_DIR}/Common/source/sha1dgst.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shell.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellactivate.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellblocker.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellbuttons.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellcallbacks.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellfile.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellhooks.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shelljuggler.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellkb.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellmenu.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellmouse.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellops.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellprint.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellscrap.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellscroll.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellsysverbs.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellundo.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellupdate.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellverbs.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellwindow.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellwindowmenu.c"
	"${PROJECT_SOURCE_DIR}/Common/source/shellwindowverbs.c"
	"${PROJECT_SOURCE_DIR}/Common/source/smallicon.c"
	"${PROJECT_SOURCE_DIR}/Common/source/sounds.c"
	"${PROJECT_SOURCE_DIR}/Common/source/strings.c"
	"${PROJECT_SOURCE_DIR}/Common/source/stringverbs.c"
	"${PROJECT_SOURCE_DIR}/Common/source/sysshellcall.c"
	"${PROJECT_SOURCE_DIR}/Common/source/tablecompare.c"
	"${PROJECT_SOURCE_DIR}/Common/source/tabledisplay.c"
	"${PROJECT_SOURCE_DIR}/Common/source/tableedit.c"
	"${PROJECT_SOURCE_DIR}/Common/source/tableexternal.c"
	"${PROJECT_SOURCE_DIR}/Common/source/tablefind.c"
	"${PROJECT_SOURCE_DIR}/Common/source/tableformats.c"
	"${PROJECT_SOURCE_DIR}/Common/source/tableops.c"
	"${PROJECT_SOURCE_DIR}/Common/source/tablepack.c"
	"${PROJECT_SOURCE_DIR}/Common/source/tablepopup.c"
	"${PROJECT_SOURCE_DIR}/Common/source/tablerunbutton.c"
	"${PROJECT_SOURCE_DIR}/Common/source/tablescrap.c"
	"${PROJECT_SOURCE_DIR}/Common/source/tablestructure.c"
	"${PROJECT_SOURCE_DIR}/Common/source/tablevalidate.c"
	"${PROJECT_SOURCE_DIR}/Common/source/tableverbs.c"
	"${PROJECT_SOURCE_DIR}/Common/source/tablewindow.c"
	"${PROJECT_SOURCE_DIR}/Common/source/textdisplay.c"
	"${PROJECT_SOURCE_DIR}/Common/source/textedit.c"
	"${PROJECT_SOURCE_DIR}/Common/source/threads.c"
	"${PROJECT_SOURCE_DIR}/Common/source/timedate.c"
	"${PROJECT_SOURCE_DIR}/Common/source/whirlpool.c"
	"${PROJECT_SOURCE_DIR}/Common/source/winregistry.c"
	"${PROJECT_SOURCE_DIR}/Common/source/WinSockNetEvents.c"
	"${PROJECT_SOURCE_DIR}/Common/source/wpengine.c"
	"${PROJECT_SOURCE_DIR}/Common/source/wpverbs.c"
	"${PROJECT_SOURCE_DIR}/Common/stubs/megastubs.c"
	"${PROJECT_SOURCE_DIR}/Common/stubs/megastubs2.c"
	"${PROJECT_SOURCE_DIR}/Common/stubs/minneed.c"
	"${PROJECT_SOURCE_DIR}/Common/resources/Win32/WinLand.rc"
)


target_include_directories(opml PRIVATE
	"${PROJECT_SOURCE_DIR}/Common/headers"
	"${PROJECT_SOURCE_DIR}/Common/SystemHeaders"
	"${PROJECT_SOURCE_DIR}/Common/resources/Win32/res"
	"${PROJECT_SOURCE_DIR}/Common/Paige/headers"
	"${PROJECT_SOURCE_DIR}/Common/PCRE"
)

find_library(LIBVERSION Version)
find_library(LIBCOMCTL ComCtl32)
find_library(LIBWINMM WinMM)
find_library(LIBWSOCK32 Wsock32)

target_link_libraries(opml PRIVATE "${PROJECT_SOURCE_DIR}/Common/Paige/PaigeWinVC8CRT.lib")

target_link_libraries(opml PUBLIC
	${LIBVERSION}
	${LIBCOMCTL}
	${LIBWINMM}
	${LIBWSOCK32}
)


target_link_options(opml PRIVATE "/MANIFEST:NO")

